--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Market Coin Data</h1><img id="onlyimg" src="../Coin_data_fetch/fav.png">
+        <h1>Market Coin Data</h1><img id="onlyimg" src="../Coins_data_fetch/fav.png">
         <div class="buttons">
             <!-- <button id="fetch-button">Fetch Data</button> -->
           <input type="text" id="search-input" placeholder="Search by Name or Symbol">
